# EMS

./: CMakeLists.txt  LICENSE
include/ems/core/: Emergency.hpp  EmergencyUnit.hpp
src/: main.cpp
src/core/: Emergency.cpp  EmergencyUnit.cpp
tests/unit/core/: EmergencyTests.cpp
